welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugHunting:12: error: expected class or object definition
def hunt() {while (isFacingTrail)
^