welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def isFacingTrail():Boolean = {
	if(!estFaceMur) {avance();
	var sol:Color = getCouleurSol();
	recule();
	return sol == Color.green;}
	else{gauche();avance();
		var sol : Color = getCouleurSol();
		recule();
		return sol == Color.green}}

def hunt() {while (isFacingTrail)
		{avance();baisseBrosse();leveBrosse();}
		   
		   if(!isFacingTrail) {gauche();isFacingTrail(); 
		   if(!isFacingTrail){droite();isFacingTrail();
		   if(!isFacingTrail){droite();isFailingTrail();}
		   if(estSurBiscuit) {prendBiscuit();}}

hunt()
    // Write your code here
}

// Copy your isFacingTrail() here
